--- a/assets/style.css
+++ b/assets/style.css
@@ -268,6 +268,10 @@ background: aliceblue;
     background-color: rgb(182, 243, 235);
 }
 
-@media only screen and (min-width: 800px) {
-    
+@media screen and (max-width: 768px) {
+
+    main,
+    nav {
+        flex-direction: column;
+    }
 }
